cluster/emulatorjs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emulatorjs
  namespace: emulatorjs
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: emulatorjs
  template:
    metadata:
      labels:
        app.kubernetes.io/name: emulatorjs
    spec:
      containers:
        - name: emulatorjs
          image: lscr.io/linuxserver/emulatorjs:1.9.2-ls173
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 80
            - name: mgmt
              containerPort: 3000
          volumeMounts:
            - name: config
              mountPath: /config
            - name: data
              mountPath: /data
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 20
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: emulatorjs-config
        - name: data
          persistentVolumeClaim:
            claimName: emulatorjs-data
