cluster/emulatorjs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: emulatorjs
  namespace: emulatorjs
spec:
  selector:
    app.kubernetes.io/name: emulatorjs
  ports:
    - name: http
      port: 80
      targetPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: emulatorjs-mgmt
  namespace: emulatorjs
spec:
  selector:
    app.kubernetes.io/name: emulatorjs
  ports:
    - name: mgmt
      port: 3000
      targetPort: 3000
