cluster/emulatorjs/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: emulatorjs
  namespace: emulatorjs
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-domeneshop
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`games.nebulahvelvet.no`) && PathPrefix(`/outpost.goauthentik.io/`)
      priority: 15
      services:
        - kind: Service
          name: ak-outpost-authentik-embedded-outpost
          namespace: authentik
          port: 9000
    - kind: Rule
      match: Host(`games.nebulahvelvet.no`)
      priority: 10
      middlewares:
        - name: authentik-chain
          namespace: traefik-external
        - name: authentik-forward-auth
          namespace: traefik-external
      services:
        - kind: Service
          name: emulatorjs
          namespace: emulatorjs
          port: 80
  tls:
    secretName: emulatorjs-tls
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: emulatorjs-mgmt
  namespace: emulatorjs
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  ingressClassName: traefik-internal
  rules:
    - host: emulatorjs-mgmt.local.net
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: emulatorjs-mgmt
                port:
                  number: 3000
